Added more flexible keybinds, allowing for jex commands, server commands, or normal chat